; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/arm64/extr_kpc.c_enable_counter.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/arm64/extr_kpc.c_enable_counter.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SREG_PMCR0 = common dso_local global i32 0, align 4
@PMCR0_INTGEN_AIC = common dso_local global i32 0, align 4
@PMCR0_INTGEN_MASK = common dso_local global i32 0, align 4
@saved_PMCR = common dso_local global i32** null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @enable_counter to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @enable_counter(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %10 = call i32 (...) @cpu_number()
  store i32 %10, i32* %3, align 4
  store i32 0, i32* %4, align 4
  %11 = load i32, i32* @SREG_PMCR0, align 4
  %12 = call i32 @SREG_READ(i32 %11)
  %13 = or i32 %12, 3
  store i32 %13, i32* %4, align 4
  %14 = load i32, i32* %4, align 4
  %15 = load i32, i32* %2, align 4
  %16 = call i32 @PMCR0_PMC_ENABLE_MASK(i32 %15)
  %17 = and i32 %14, %16
  %18 = icmp ne i32 %17, 0
  %19 = zext i1 %18 to i32
  store i32 %19, i32* %6, align 4
  %20 = load i32, i32* %4, align 4
  %21 = load i32, i32* %2, align 4
  %22 = call i32 @PMCR0_PMI_ENABLE_MASK(i32 %21)
  %23 = and i32 %20, %22
  %24 = icmp ne i32 %23, 0
  %25 = zext i1 %24 to i32
  store i32 %25, i32* %7, align 4
  %26 = load i32, i32* @PMCR0_INTGEN_AIC, align 4
  store i32 %26, i32* %5, align 4
  %27 = load i32, i32* %4, align 4
  %28 = load i32, i32* @PMCR0_INTGEN_MASK, align 4
  %29 = and i32 %27, %28
  %30 = load i32, i32* %5, align 4
  %31 = icmp eq i32 %29, %30
  %32 = zext i1 %31 to i32
  store i32 %32, i32* %8, align 4
  %33 = load i32, i32* %6, align 4
  %34 = icmp ne i32 %33, 0
  br i1 %34, label %35, label %41

35:                                               ; preds = %1
  %36 = load i32, i32* %7, align 4
  %37 = icmp ne i32 %36, 0
  br i1 %37, label %38, label %41

38:                                               ; preds = %35
  %39 = load i32, i32* %8, align 4
  %40 = icmp ne i32 %39, 0
  br label %41

41:                                               ; preds = %38, %35, %1
  %42 = phi i1 [ false, %35 ], [ false, %1 ], [ %40, %38 ]
  %43 = zext i1 %42 to i32
  store i32 %43, i32* %9, align 4
  %44 = load i32, i32* %9, align 4
  %45 = icmp ne i32 %44, 0
  br i1 %45, label %65, label %46

46:                                               ; preds = %41
  %47 = load i32, i32* %2, align 4
  %48 = call i32 @PMCR0_PMC_ENABLE_MASK(i32 %47)
  %49 = load i32, i32* %4, align 4
  %50 = or i32 %49, %48
  store i32 %50, i32* %4, align 4
  %51 = load i32, i32* %2, align 4
  %52 = call i32 @PMCR0_PMI_ENABLE_MASK(i32 %51)
  %53 = load i32, i32* %4, align 4
  %54 = or i32 %53, %52
  store i32 %54, i32* %4, align 4
  %55 = load i32, i32* @PMCR0_INTGEN_MASK, align 4
  %56 = xor i32 %55, -1
  %57 = load i32, i32* %4, align 4
  %58 = and i32 %57, %56
  store i32 %58, i32* %4, align 4
  %59 = load i32, i32* %5, align 4
  %60 = load i32, i32* %4, align 4
  %61 = or i32 %60, %59
  store i32 %61, i32* %4, align 4
  %62 = load i32, i32* @SREG_PMCR0, align 4
  %63 = load i32, i32* %4, align 4
  %64 = call i32 @SREG_WRITE(i32 %62, i32 %63)
  br label %65

65:                                               ; preds = %46, %41
  %66 = load i32, i32* %4, align 4
  %67 = load i32**, i32*** @saved_PMCR, align 8
  %68 = load i32, i32* %3, align 4
  %69 = sext i32 %68 to i64
  %70 = getelementptr inbounds i32*, i32** %67, i64 %69
  %71 = load i32*, i32** %70, align 8
  %72 = getelementptr inbounds i32, i32* %71, i64 0
  store i32 %66, i32* %72, align 4
  %73 = load i32, i32* %9, align 4
  ret i32 %73
}

declare dso_local i32 @cpu_number(...) #1

declare dso_local i32 @SREG_READ(i32) #1

declare dso_local i32 @PMCR0_PMC_ENABLE_MASK(i32) #1

declare dso_local i32 @PMCR0_PMI_ENABLE_MASK(i32) #1

declare dso_local i32 @SREG_WRITE(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
